Update to .NET 9 release build

--- a/Solutions/Corvus.Json.ExtendedTypes/Corvus.Json.ExtendedTypes.csproj
+++ b/Solutions/Corvus.Json.ExtendedTypes/Corvus.Json.ExtendedTypes.csproj
@@ -27,8 +27,9 @@
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
     <PackageReference Include="Corvus.UriTemplates" Version="2.2.0" />
-		<PackageReference Include="NodaTime" Version="3.1.12" />
-    <PackageReference Include="System.Text.Json" Version="9.0.0-rc.2.24473.5" />
+		<PackageReference Include="NodaTime" Version="3.2.0" />
+		<PackageReference Include="System.Collections.Immutable" Version="9.0.0" />
+    <PackageReference Include="System.Text.Json" Version="9.0.0" />
   </ItemGroup>
 
 	<ItemGroup>
@@ -40,7 +41,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <PackageReference Update="Roslynator.Analyzers" Version="4.12.4" />
+	  <PackageReference Update="Roslynator.Analyzers" Version="4.12.9" />
 	</ItemGroup>
 
 </Project>
