--- a/Solutions/Corvus.Json.CodeGeneration.HttpClientDocumentResolver/Corvus.Json.CodeGeneration.HttpClientDocumentResolver.csproj
+++ b/Solutions/Corvus.Json.CodeGeneration.HttpClientDocumentResolver/Corvus.Json.CodeGeneration.HttpClientDocumentResolver.csproj
@@ -20,11 +20,16 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Http" Version="9.0.0-rc.2.24473.5" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="9.0.0" />
+    <PackageReference Include="System.Collections.Immutable" Version="9.0.0" />
   </ItemGroup>
   
   <ItemGroup>
     <ProjectReference Include="..\Corvus.Json.CodeGeneration\Corvus.Json.CodeGeneration.csproj" />
+  </ItemGroup>
+  
+  <ItemGroup>
+    <PackageReference Update="Roslynator.Analyzers" Version="4.12.9" />
   </ItemGroup>
 
 </Project>
