--- a/Solutions/Corvus.Json.CodeGeneration/Corvus.Json.CodeGeneration.csproj
+++ b/Solutions/Corvus.Json.CodeGeneration/Corvus.Json.CodeGeneration.csproj
@@ -29,8 +29,8 @@
 
   <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
     <PackageReference Include="Microsoft.Bcl.HashCode" Version="1.1.1" />
-    <PackageReference Include="System.Text.Json" Version="9.0.0-rc.2.24473.5" />
-    <PackageReference Include="System.Collections.Immutable" Version="9.0.0-rc.2.24473.5" />
+    <PackageReference Include="System.Text.Json" Version="9.0.0" />
+    <PackageReference Include="System.Collections.Immutable" Version="9.0.0" />
   </ItemGroup>
 
   <ItemGroup>
@@ -42,7 +42,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Update="Roslynator.Analyzers" Version="4.12.4" />
+    <PackageReference Update="Roslynator.Analyzers" Version="4.12.9" />
   </ItemGroup>
 
 </Project>
