--- a/Solutions/Corvus.Json.CodeGenerator/Corvus.Json.CodeGenerator.csproj
+++ b/Solutions/Corvus.Json.CodeGenerator/Corvus.Json.CodeGenerator.csproj
@@ -19,6 +19,8 @@
 	<ItemGroup>
 	  <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.12.0-2.final" />
 	  <PackageReference Include="Spectre.Console.Cli" Version="0.49.2-preview.0.44" />
+	  <PackageReference Include="System.Collections.Immutable" Version="9.0.0" />
+	  <PackageReference Include="System.Reflection.Metadata" Version="9.0.0" />
 	</ItemGroup>
 
 	<ItemGroup>
