--- a/Solutions/Corvus.Json.JsonReference/Corvus.Json.JsonReference.csproj
+++ b/Solutions/Corvus.Json.JsonReference/Corvus.Json.JsonReference.csproj
@@ -23,7 +23,7 @@
 
   <ItemGroup>
     <PackageReference Include="Corvus.HighPerformance" Version="1.0.0" />
-    <PackageReference Include="System.Text.Json" Version="9.0.0-rc.2.24473.5" />
+    <PackageReference Include="System.Text.Json" Version="9.0.0" />
     <PackageReference Include="Endjin.RecommendedPractices.GitHub" Version="2.1.13">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -35,7 +35,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Update="Roslynator.Analyzers" Version="4.12.4" />
+    <PackageReference Update="Roslynator.Analyzers" Version="4.12.9" />
   </ItemGroup>
 
 </Project>
