--- a/Solutions/Corvus.Json.Patch.SpecGenerator/Corvus.Json.Patch.SpecGenerator.csproj
+++ b/Solutions/Corvus.Json.Patch.SpecGenerator/Corvus.Json.Patch.SpecGenerator.csproj
@@ -17,6 +17,8 @@
 		</PackageReference>
 		<PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.12.0-2.final" />
 		<PackageReference Include="Mono.TextTemplating" Version="3.0.0" />
+		<PackageReference Include="System.Collections.Immutable" Version="9.0.0" />
+		<PackageReference Include="System.Reflection.Metadata" Version="9.0.0" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -29,7 +31,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-	  <PackageReference Update="Roslynator.Analyzers" Version="4.12.4" />
+	  <PackageReference Update="Roslynator.Analyzers" Version="4.12.9" />
 	</ItemGroup>
 
 	<ItemGroup>
