Updated test suite

--- a/Solutions/Corvus.Json.Specs/appsettings.json
+++ b/Solutions/Corvus.Json.Specs/appsettings.json
@@ -9,7 +9,8 @@
         "testBaseDirectory": "../../../../../JSON-Schema-Test-Suite/tests/draft4"
     },
     "jsonSchemaBuilderOpenApi30DriverSettings": {
-        "testBaseDirectory": "../../../../../OpenApi-Test-Suite/tests/openApi30"
+        "testBaseDirectory": "../../../../../OpenApi-Test-Suite/tests/openApi30",
+        "remotesBaseDirectory": "../../../../../OpenApi-Test-Suite/remotes"
     },
     "jsonSchemaBuilder7DriverSettings": {
         "testBaseDirectory": "../../../../../JSON-Schema-Test-Suite/tests/draft7"
