--- a/Solutions/Corvus.Json.SourceGeneratorTools/Corvus.Json.SourceGeneratorTools.csproj
+++ b/Solutions/Corvus.Json.SourceGeneratorTools/Corvus.Json.SourceGeneratorTools.csproj
@@ -6,11 +6,12 @@
     <LangVersion>12.0</LangVersion>
     <Nullable>enable</Nullable>
     <DefineConstants>$(DefineConstants);BUILDING_SOURCE_GENERATOR</DefineConstants>
+    <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
   </PropertyGroup>
 
   <PropertyGroup Label="NuGet">
     <DevelopmentDependency>true</DevelopmentDependency>
-    <NoWarn>$(NoWarn);nullable;NU5128;RS2008;SA0001</NoWarn>
+    <NoWarn>$(NoWarn);nullable;IDE0007;NU5128;RS2008;SA0001;SA1633;SA1101;SA1201;SA1202;SA1204;SA1401;SA1413;SA1512;SA1629</NoWarn>
     <IncludeBuildOutput>false</IncludeBuildOutput>
     <GenerateDocumentationFile>false</GenerateDocumentationFile>
     <IncludeBuildOutput>false</IncludeBuildOutput>
@@ -60,6 +61,27 @@
     <Compile Include="..\Corvus.Json.CodeGeneration.OpenApi30\Corvus.Json.CodeGeneration\OpenApi30\**\*.cs">
       <Link>Corvus.Json.CodeGeneration.OpenApi30\%(RecursiveDir)\%(Filename)%(Extension)</Link>
     </Compile>
+    <Compile Include="..\Corvus.Json.JsonSchema.Draft201909\Draft201909\**\*.cs">
+      <Link>Corvus.Json.CodeGeneration.Draft201909\%(RecursiveDir)\%(Filename)%(Extension)</Link>
+    </Compile>
+    <Compile Include="..\Corvus.Json.JsonSchema.Draft202012\Draft202012\**\*.cs">
+      <Link>Corvus.Json.CodeGeneration.Draft202012\%(RecursiveDir)\%(Filename)%(Extension)</Link>
+    </Compile>
+    <Compile Include="..\Corvus.Json.JsonSchema.Draft4\Draft4\**\*.cs">
+      <Link>Corvus.Json.CodeGeneration.Draft4\%(RecursiveDir)\%(Filename)%(Extension)</Link>
+    </Compile>
+    <Compile Include="..\Corvus.Json.JsonSchema.Draft6\Draft6\**\*.cs">
+      <Link>Corvus.Json.CodeGeneration.Draft6\%(RecursiveDir)\%(Filename)%(Extension)</Link>
+    </Compile>
+    <Compile Include="..\Corvus.Json.JsonSchema.Draft7\Draft7\**\*.cs">
+      <Link>Corvus.Json.CodeGeneration.Draft7\%(RecursiveDir)\%(Filename)%(Extension)</Link>
+    </Compile>
+    <Compile Include="..\Corvus.Json.JsonSchema.OpenApi30\OpenApi30\**\*.cs">
+      <Link>Corvus.Json.CodeGeneration.OpenApi30\%(RecursiveDir)\%(Filename)%(Extension)</Link>
+    </Compile>
+    <Compile Include="..\Corvus.Json.JsonSchema.OpenApi31\OpenApi31\**\*.cs">
+      <Link>Corvus.Json.CodeGeneration.OpenApi31\%(RecursiveDir)\%(Filename)%(Extension)</Link>
+    </Compile>
 
     <Compile Remove="..\Corvus.Json.CodeGeneration\Corvus.Json.CodeGeneration\**\FileSystemDocumentResolver.cs" />
     <Compile Remove="..\Corvus.Json.CodeGeneration.CSharp\Corvus.Json.CodeGeneration\CSharp\**\NullableAttributes.cs" />
@@ -95,18 +117,17 @@
 
 
   <ItemGroup>
-    <PackageReference Include="CommunityToolkit.HighPerformance" Version="8.3.2" />
     <PackageReference Include="Endjin.RecommendedPractices.GitHub" Version="2.1.14">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.11.0" />
     <PackageReference Include="Microsoft.Extensions.ObjectPool" Version="8.0.11" />
     <PackageReference Include="NodaTime" Version="3.2.0" />
     <PackageReference Include="System.Reflection.Emit.Lightweight" Version="4.7.0" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="System.Text.Json" Version="8.0.5" />
     <PackageReference Include="Microsoft.Bcl.AsyncInterfaces" Version="8.0.0" />
     <PackageReference Include="Microsoft.Bcl.HashCode" Version="1.1.1" />
@@ -128,6 +149,10 @@
 
   <ItemGroup>
     <PackageReference Update="Roslynator.Analyzers" Version="4.12.9" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Community.HighPerformance\Buffers\Views\" />
   </ItemGroup>
 
 </Project>
