--- a/Solutions/Sandbox.SourceGenerator/Sandbox.SourceGenerator.csproj
+++ b/Solutions/Sandbox.SourceGenerator/Sandbox.SourceGenerator.csproj
@@ -1,5 +1,5 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-  <Import Project="..\Corvus.Json.SourceGenerator\Corvus.Json.SourceGenerator.props"/>
+  <Import Project="..\Corvus.Json.SourceGenerator\Corvus.Json.SourceGenerator.props" />
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
@@ -13,11 +13,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Model\keycloak-realm-26.0.2.json" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Corvus.Json.ExtendedTypes\Corvus.Json.ExtendedTypes.csproj" />
     <ProjectReference Include="..\Corvus.Json.SourceGenerator\Corvus.Json.SourceGenerator.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" SetTargetFramework="TargetFramework=netstandard2.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <AdditionalFiles Include="Model\keycloak-realm-26.0.2.json" />
     <AdditionalFiles Include="test.json" />
   </ItemGroup>
 
