Updated the source generator to respect the acessibility of the type.

--- a/Solutions/Corvus.Json.SourceGenerator/Corvus.Json.SourceGenerator.props
+++ b/Solutions/Corvus.Json.SourceGenerator/Corvus.Json.SourceGenerator.props
@@ -5,6 +5,7 @@
         <CompilerVisibleProperty Include="CorvusJsonSchemaUseOptionalNameHeuristics" />
         <CompilerVisibleProperty Include="CorvusJsonSchemaAlwaysAssertFormat" />
         <CompilerVisibleProperty Include="CorvusJsonSchemaDisabledNamingHeuristics" />
+        <CompilerVisibleProperty Include="CorvusJsonSchemaDefaultAccessibility" />
     </ItemGroup>
 
     <PropertyGroup>
