Add implicit operator string support and update README
- Added `CorvusJsonSchemaUseImplicitOperatorString` property in Corvus.Json.SourceGenerator.props.
- Implemented logic to read the `CorvusJsonSchemaUseImplicitOperatorString` from global options for build-time configuration.
- Enhanced `IncrementalSourceGenerator` to support the new `useImplicitOperatorString` parameter in method calls and constructors.

--- a/Solutions/Sandbox.SourceGenerator/Sandbox.SourceGenerator.csproj
+++ b/Solutions/Sandbox.SourceGenerator/Sandbox.SourceGenerator.csproj
@@ -12,6 +12,7 @@
     <CorvusJsonSchemaOptionalAsNullable>None</CorvusJsonSchemaOptionalAsNullable>
     <CorvusJsonSchemaDefaultAccessibility>Internal</CorvusJsonSchemaDefaultAccessibility>
     <CorvusJsonSchemaAddExplicitUsings>True</CorvusJsonSchemaAddExplicitUsings>
+    <CorvusJsonSchemaUseImplicitOperatorString>True</CorvusJsonSchemaUseImplicitOperatorString>
   </PropertyGroup>
 
   <ItemGroup>
