--- a/Solutions/Corvus.Json.SourceGenerator/Corvus.Json.SourceGenerator.props
+++ b/Solutions/Corvus.Json.SourceGenerator/Corvus.Json.SourceGenerator.props
@@ -7,6 +7,7 @@
         <CompilerVisibleProperty Include="CorvusJsonSchemaDisabledNamingHeuristics" />
       <CompilerVisibleProperty Include="CorvusJsonSchemaDefaultAccessibility" />
       <CompilerVisibleProperty Include="CorvusJsonSchemaAddExplicitUsings" />
+      <CompilerVisibleProperty Include="CorvusJsonSchemaUseImplicitOperatorString" />
     </ItemGroup>
 
     <PropertyGroup>
