updated package dependencies
- removed duplicated embedded metaschema over multiple projects
- added IMetaSchema.cs to Corvus.Json.JsonReference
- added Draft4.MetaSchema.cs
- Added overload to Corvus.Json.CodeGeneration.DocumentResolvers.IDocumentResolver.AddDocument(IMetaSchema)

--- a/Solutions/Corvus.Json.CodeGeneration.6/Corvus.Json.CodeGeneration.6.csproj
+++ b/Solutions/Corvus.Json.CodeGeneration.6/Corvus.Json.CodeGeneration.6.csproj
@@ -34,6 +34,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Corvus.Json.CodeGeneration\Corvus.Json.CodeGeneration.csproj" />
+    <ProjectReference Include="..\Corvus.Json.JsonSchema.Draft6\Corvus.Json.JsonSchema.Draft6.csproj" />
   </ItemGroup>
 
   <ItemGroup>
