--- a/Solutions/Corvus.Json.CodeGeneration.201909/Corvus.Json.CodeGeneration.201909.csproj
+++ b/Solutions/Corvus.Json.CodeGeneration.201909/Corvus.Json.CodeGeneration.201909.csproj
@@ -34,6 +34,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Corvus.Json.CodeGeneration\Corvus.Json.CodeGeneration.csproj" />
+    <ProjectReference Include="..\Corvus.Json.JsonSchema.Draft201909\Corvus.Json.JsonSchema.Draft201909.csproj" />
   </ItemGroup>
 
   <ItemGroup>
