--- a/Solutions/Corvus.Json.CodeGeneration.4/Corvus.Json.CodeGeneration.4.csproj
+++ b/Solutions/Corvus.Json.CodeGeneration.4/Corvus.Json.CodeGeneration.4.csproj
@@ -34,6 +34,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Corvus.Json.CodeGeneration\Corvus.Json.CodeGeneration.csproj" />
+    <ProjectReference Include="..\Corvus.Json.JsonSchema.Draft4\Corvus.Json.JsonSchema.Draft4.csproj" />
   </ItemGroup>
 
   <ItemGroup>
