--- a/Solutions/Corvus.Json.JsonSchema.OpenApi31/Corvus.Json.JsonSchema.OpenApi31.csproj
+++ b/Solutions/Corvus.Json.JsonSchema.OpenApi31/Corvus.Json.JsonSchema.OpenApi31.csproj
@@ -24,6 +24,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Corvus.Json.CodeGeneration.202012\Corvus.Json.CodeGeneration.202012.csproj" />
     <ProjectReference Include="..\Corvus.Json.ExtendedTypes\Corvus.Json.ExtendedTypes.csproj" />
   </ItemGroup>
 
