--- a/Solutions/Corvus.Json.CodeGeneration.CorvusVocabulary/Corvus.Json.CodeGeneration.CorvusVocabulary.csproj
+++ b/Solutions/Corvus.Json.CodeGeneration.CorvusVocabulary/Corvus.Json.CodeGeneration.CorvusVocabulary.csproj
@@ -33,6 +33,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Corvus.Json.CodeGeneration.202012\Corvus.Json.CodeGeneration.202012.csproj" />
     <ProjectReference Include="..\Corvus.Json.CodeGeneration\Corvus.Json.CodeGeneration.csproj" />
   </ItemGroup>
 
