--- a/Solutions/Corvus.Json.SourceGeneratorTools/Corvus.Json.SourceGeneratorTools.csproj
+++ b/Solutions/Corvus.Json.SourceGeneratorTools/Corvus.Json.SourceGeneratorTools.csproj
@@ -122,6 +122,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="IndexRange" Version="1.0.3" />
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.11.0" />
     <PackageReference Include="Microsoft.Extensions.ObjectPool" Version="8.0.11" />
     <PackageReference Include="NodaTime" Version="3.2.1" />
