Add YAML support to the source generator

--- a/Solutions/Sandbox.SourceGenerator/Sandbox.SourceGenerator.csproj
+++ b/Solutions/Sandbox.SourceGenerator/Sandbox.SourceGenerator.csproj
@@ -29,7 +29,9 @@
   <ItemGroup>
     <AdditionalFiles Include="Model\keycloak-realm-26.0.2.json" />
     <AdditionalFiles Include="test.json" />
+    <AdditionalFiles Include="test.yaml" />
     <AdditionalFiles Include="test2.json" />
+    <AdditionalFiles Include="test2.yml" />
   </ItemGroup>
 
   <ItemGroup>
