--- a/Solutions/Corvus.Json.SourceGenerator/Corvus.Json.SourceGenerator.csproj
+++ b/Solutions/Corvus.Json.SourceGenerator/Corvus.Json.SourceGenerator.csproj
@@ -76,13 +76,14 @@
   </ItemGroup>
 
   <ItemGroup>
-		<!-- System.Text.Json 8.x has a dependency on Microsoft.Bcl.AsyncInterfaces 8.0.0 -->
-		<!-- System.Text.Json 9.x has a dependency on Microsoft.Bcl.AsyncInterfaces 9.0.0 -->
-		<!-- Roslyn 4.10 has a dependency on AsyncInterfaces 8.0.0: https://github.com/dotnet/roslyn/blob/3bdcd8b471bef9a522c16a0ada911eb9890b1a6c/eng/Versions.props#L39 -->
-		<!-- So, stick with 8.x of STJ. -->
-		<PackageReference Include="System.Text.Json" Version="8.0.6" PrivateAssets="all" GeneratePathProperty="true" />
+    <!-- System.Text.Json 8.x has a dependency on Microsoft.Bcl.AsyncInterfaces 8.0.0 -->
+    <!-- System.Text.Json 9.x has a dependency on Microsoft.Bcl.AsyncInterfaces 9.0.0 -->
+    <!-- Roslyn 4.10 has a dependency on AsyncInterfaces 8.0.0: https://github.com/dotnet/roslyn/blob/3bdcd8b471bef9a522c16a0ada911eb9890b1a6c/eng/Versions.props#L39 -->
+    <!-- So, stick with 8.x of STJ. -->
+    <PackageReference Include="System.Text.Json" Version="8.0.6" PrivateAssets="all" GeneratePathProperty="true" />
 
     <PackageReference Include="Microsoft.Bcl.HashCode" Version="1.1.1" PrivateAssets="all" GeneratePathProperty="true" />
+    <PackageReference Include="YamlDotNet" Version="16.3.0" PrivateAssets="all" GeneratePathProperty="true" />
   </ItemGroup>
 
   <PropertyGroup>
@@ -93,6 +94,7 @@
     <ItemGroup>
       <TargetPathWithTargetPlatformMoniker Include="$(PKGSystem_Text_Json)\lib\netstandard2.0\System.Text.Json.dll" IncludeRuntimeDependency="false" />
       <TargetPathWithTargetPlatformMoniker Include="$(PKGMicrosoft_Bcl_HashCode)\lib\netstandard2.0\Microsoft.Bcl.HashCode.dll" IncludeRuntimeDependency="false" />
+      <TargetPathWithTargetPlatformMoniker Include="$(PKGYamlDotNet)\lib\netstandard2.0\YamlDotNet.dll" IncludeRuntimeDependency="false" />
     </ItemGroup>
   </Target>
 
@@ -130,8 +132,9 @@
   <ItemGroup>
     <!-- Package the generator in the analyzer directory of the nuget package -->
     <None Include="$(OutputPath)\$(AssemblyName).dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false" />
-		<None Include="$(PKGSystem_Text_Json)\lib\netstandard2.0\System.Text.Json.dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false" />
-		<None Include="$(PKGMicrosoft_Bcl_HashCode)\lib\netstandard2.0\Microsoft.Bcl.HashCode.dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false" />
+    <None Include="$(PKGSystem_Text_Json)\lib\netstandard2.0\System.Text.Json.dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false" />
+    <None Include="$(PKGMicrosoft_Bcl_HashCode)\lib\netstandard2.0\Microsoft.Bcl.HashCode.dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false" />
+    <None Include="$(PKGYamlDotNet)\lib\netstandard2.0\YamlDotNet.dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false" />
     <!-- Package the props file -->
     <None Include="Corvus.Json.SourceGenerator.props" Pack="true" PackagePath="build" Visible="false" />
   </ItemGroup>
