--- a/Solutions/Corvus.Json.JsonSchema.Draft202012/Corvus.Json.JsonSchema.Draft202012.csproj
+++ b/Solutions/Corvus.Json.JsonSchema.Draft202012/Corvus.Json.JsonSchema.Draft202012.csproj
@@ -2,7 +2,7 @@
 	<Import Project="$(EndjinProjectPropsPath)" Condition="$(EndjinProjectPropsPath) != ''" />
 
 	<PropertyGroup>
-		<TargetFrameworks>netstandard2.0;net8.0</TargetFrameworks>
+		<TargetFrameworks>netstandard2.0;net8.0;net9.0;net10.0</TargetFrameworks>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 	</PropertyGroup>
@@ -13,8 +13,8 @@
 	</PropertyGroup>
 
 	<ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
-		<PackageReference Include="System.Text.Json" Version="9.0.0" />
-		<PackageReference Include="System.Collections.Immutable" Version="9.0.0" />
+		<PackageReference Include="System.Text.Json" Version="10.0.1" />
+		<PackageReference Include="System.Collections.Immutable" Version="10.0.1" />
 		<PackageReference Include="IndexRange" Version="1.1.0" />
 	</ItemGroup>
 
@@ -23,9 +23,9 @@
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
-		<PackageReference Include="Microsoft.Extensions.Http" Version="9.0.0" />
-		<PackageReference Include="Microsoft.Extensions.ObjectPool" Version="9.0.0" />
-		<PackageReference Include="NodaTime" Version="3.2.1" />
+		<PackageReference Include="Microsoft.Extensions.Http" Version="10.0.1" />
+		<PackageReference Include="Microsoft.Extensions.ObjectPool" Version="10.0.1" />
+		<PackageReference Include="NodaTime" Version="3.3.0" />
 	</ItemGroup>
 
 	<ItemGroup>
