--- a/Solutions/Corvus.Json.CodeGeneration.YamlPreProcessor/Corvus.Json.CodeGeneration.YamlPreProcessor.csproj
+++ b/Solutions/Corvus.Json.CodeGeneration.YamlPreProcessor/Corvus.Json.CodeGeneration.YamlPreProcessor.csproj
@@ -2,7 +2,7 @@
   <Import Project="$(EndjinProjectPropsPath)" Condition="$(EndjinProjectPropsPath) != ''" />
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;net8.0</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0;net8.0;net9.0;net10.0</TargetFrameworks>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
