--- a/Solutions/Corvus.Json.ExtendedTypes/Corvus.Json.ExtendedTypes.csproj
+++ b/Solutions/Corvus.Json.ExtendedTypes/Corvus.Json.ExtendedTypes.csproj
@@ -2,7 +2,7 @@
 	<Import Project="$(EndjinProjectPropsPath)" Condition="$(EndjinProjectPropsPath) != ''" />
 
 	<PropertyGroup>
-		<TargetFrameworks>netstandard2.0;netstandard2.1;net8.0</TargetFrameworks>
+		<TargetFrameworks>netstandard2.0;netstandard2.1;net8.0;net9.0;net10.0</TargetFrameworks>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 		<GenerateDocumentationFile>true</GenerateDocumentationFile>
@@ -27,9 +27,9 @@
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
     <PackageReference Include="Corvus.UriTemplates" Version="2.3.2" />
-		<PackageReference Include="NodaTime" Version="3.2.1" />
-		<PackageReference Include="System.Collections.Immutable" Version="9.0.0" />
-    <PackageReference Include="System.Text.Json" Version="9.0.0" />
+		<PackageReference Include="NodaTime" Version="3.3.0" />
+		<PackageReference Include="System.Collections.Immutable" Version="10.0.1" />
+    <PackageReference Include="System.Text.Json" Version="10.0.1" />
   </ItemGroup>
 
 	<ItemGroup>
