Added `Corvus202012` option to the CorvusJsonSchemaFallbackVocabulary property.

--- a/Solutions/Sandbox.SourceGenerator/Sandbox.SourceGenerator.csproj
+++ b/Solutions/Sandbox.SourceGenerator/Sandbox.SourceGenerator.csproj
@@ -13,6 +13,7 @@
     <CorvusJsonSchemaDefaultAccessibility>Internal</CorvusJsonSchemaDefaultAccessibility>
     <CorvusJsonSchemaAddExplicitUsings>True</CorvusJsonSchemaAddExplicitUsings>
     <CorvusJsonSchemaUseImplicitOperatorString>True</CorvusJsonSchemaUseImplicitOperatorString>
+    <CorvusJsonSchemaFallbackVocabulary>Corvus202012</CorvusJsonSchemaFallbackVocabulary>
   </PropertyGroup>
 
   <ItemGroup>
